# EuiX

./: .gitignore  CMakeLists.txt  CMakePresets.json  EuiX.code-workspace  LICENSE  README.md  msvc.bat  msvc_version.bat
EuiX/: CMakeLists.txt
EuiX/include/: analyse.hpp  components.hpp  progress_bar.hpp  widget.hpp
EuiX/src/: analyse.cpp  components.cpp  progress_bar.cpp  widget.cpp
EuiXLib/: EuiX.hpp
EuiXLib/Debug/: EuiX.lib
EuiXLib/Release/: EuiX.lib
EuiXLib/lib32/debug/: euix.lib
EuiXLib/lib32/release/: euix.lib
EuiXLib/lib64/debug/: euix.lib
EuiXLib/lib64/release/: euix.lib
exp3/: CMakeLists.txt
exp3/include/: conf.hpp  semaphore.hpp  sim3.1.hpp  sim3.2.hpp
exp3/src/: exp3.1.cpp  exp3.2.cpp  sim3.1.cpp  sim3.2.cpp
